--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
 
     <script type="module">
       import { html, render } from 'lit-html';
-      import '../yooda-comp.ts';
+      import '../src/index.ts';
 
       const title = 'Hello owc World!';
       render(
