--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,10 @@
 
     <script type="module">
       import { html, render } from 'lit-html';
+      import { setupReset } from '../src/reset.ts';
       import '../src/index.ts';
+
+      setupReset();
 
       const title = 'Hello owc World!';
       render(
